--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,36 @@
-# Node.js dependencies
+# Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment variables
-.env
-
 # Logs
-logs/
+logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log.*
 
-# IDEs/Editors
+# Dependency directories
+/frontend/node_modules
+/server/node_modules
+
+# Build output
+/frontend/dist/
+/frontend/public/build/
+/server/build/
+
+# IDEs y editores
 .vscode/
 .idea/
-*.swp
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
 
-# System files
+# Sistema operativo
 .DS_Store
 Thumbs.db
 
-# Build files
-dist/
-build/
-coverage/
-
-# Temporary files
-*.tmp
-*.temp
-
-# Optional npm cache directory
-.npm/
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
+# Otros archivos
+package-lock.json
+yarn.lock
 
