--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "socketio",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server/index.js --ignore frontend"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "morgan": "^1.10.0",
     "socket.io": "^4.8.1"
   }
 }
